# UDIG

./: .gitignore  BERT_UDIG_attribution.ipynb  DistilBERT_UDIG_attribution.ipynb  LICENSE  MANIFEST.in  README.md  attributions.py  bert_helper.py  dig.py  distilbert_helper.py  pyproject.toml  requirements.txt  roberta_helper.py  run.py  run_evaluation_esg_f_masking_ref_logit.py  run_evaluation_ig.py  run_evaluation_udig.py  setup.py  udig.py  xai_metrics.py
udig/: __init__.py  attributions.py  monotonic_paths.py  udig.py  xai_metrics.py
