[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udig"
version = "0.1.0"
description = "Uniform Discretized Integrated Gradients: An effective attribution-based method for explaining large language models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Swarnava Sinha Roy", email = "swarnava.sinharoy@wellsfargo.com"},
    {name = "Ayan Kundu", email = "ayan.kundu@wellsfargo.com"}
]
maintainers = [
    {name = "Swarnava Sinha Roy", email = "swarnava.sinharoy@wellsfargo.com"},
    {name = "Ayan Kundu", email = "ayan.kundu@wellsfargo.com"}
]
keywords = ["explainable-ai", "attribution", "integrated-gradients", "nlp", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "transformers>=4.26.1",
    "captum>=0.8.0",
    "torch",
    "numpy",
    "scikit-learn",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/king17pvp/UDIG"
Repository = "https://github.com/king17pvp/UDIG"
Issues = "https://github.com/king17pvp/UDIG/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["udig*"]

[tool.setuptools.package-data]
udig = ["*.pkl", "*.json", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
